src/styles/styles.css
@font-face {
    font-family: "BalsamiqSans-Regular";
    font-style: normal;
    src: local("BalsamiqSans-Regular"), local("BalsamiqSans-Regular"),
    url("../fonts/BalsamiqSans-Regular.ttf") format("truetype");
}
  
@font-face {
    font-family: "BalsamiqSans-Bold";
    font-style: normal;
    src: local("BalsamiqSans-Bold"), local("BalsamiqSans-Bold"),
    url("../fonts/BalsamiqSans-Bold.ttf") format("truetype");
}

@font-face {
    font-family: "BalsamiqSans-BoldItalic";
    font-style: normal;
    src: local("BalsamiqSans-BoldItalic"), local("BalsamiqSans-BoldItalic"),
    url("../fonts/BalsamiqSans-BoldItalic.ttf") format("truetype");
}

html, body {
    background: #30977F;
    font-family: "BalsamiqSans-Regular";
    margin: 0;
    padding: 0;
}

